chore: se deshabilita autheticación temporalmente